config favicon, mobile responsive margins & nav

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@ html, body {
     text-align: left;
 }
 body{
-    background:  rgb(0, 36, 28);
+    background:  #00241c;
     background-repeat: no-repeat;
 }
 p{
