--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -32,6 +32,11 @@ div.image img {
 /* RESPONSIVE::::: */
 @media screen and (max-width: 1100px){
 
+    .grid {
+        margin:40px 10px 10px;
+        border-top: 1px solid white;
+    }
+
     .text {
         grid-column: span 2;
     }
